[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/components/Alarm.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/ring_ring.ogg" type="AudioStream" id=2]

[node name="AlarmContainer" type="VBoxContainer"]
margin_right = 89.0
margin_bottom = 136.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AlarmLabelHour" type="Label" parent="."]
margin_right = 89.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlarmLabelMinutes" type="Label" parent="."]
margin_top = 18.0
margin_right = 89.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeAlarmHour" type="LineEdit" parent="."]
margin_top = 36.0
margin_right = 89.0
margin_bottom = 60.0
align = 1
placeholder_text = "Hours"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeAlarmMinutes" type="LineEdit" parent="."]
margin_top = 64.0
margin_right = 89.0
margin_bottom = 88.0
align = 1
placeholder_text = "Minutes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetAlarm" type="Button" parent="."]
margin_top = 92.0
margin_right = 89.0
margin_bottom = 112.0
text = "Set alarm"

[connection signal="pressed" from="SetAlarm" to="." method="_on_SetAlarm_pressed"]
